[project]
name = "gym-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.121.0",
    "pydantic-settings==2.11.0",
    "pydantic[email]>=2.12.4",
    "sentry-sdk>=2.43.0",
    "sqlmodel==0.0.27",
    "uvicorn>=0.38.0",
]
